# sdk-nrf

./: CODEOWNERS  Kconfig.nrf  west.yml
boards/nordic/nrf7120pdk/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.nrf7120pdk  board.c  board.cmake  board.yml  nrf7120_cpuapp_common.dtsi  nrf7120_enga_cpuapp_common.dtsi  nrf7120pdk_nrf7120-common.dtsi  nrf7120pdk_nrf7120-emu-pinctrl.dtsi  nrf7120pdk_nrf7120-pinctrl.dtsi  nrf7120pdk_nrf7120_cpuapp_defconfig  nrf7120pdk_nrf7120_cpuapp_emu.dts  nrf7120pdk_nrf7120_cpuapp_emu.yaml  nrf7120pdk_nrf7120_cpuapp_emu_defconfig  nrf7120pdk_nrf7120_enga-common.dtsi  nrf7120pdk_nrf7120_enga_cpuapp.dts  nrf7120pdk_nrf7120_enga_cpuapp.yaml  nrf7120pdk_nrf7120_enga_cpuapp_defconfig  nrf7120pdk_nrf7120_enga_cpuapp_ns.dts  nrf7120pdk_nrf7120_enga_cpuapp_ns.yaml  nrf7120pdk_nrf7120_enga_cpuflpr.dts  nrf7120pdk_nrf7120_enga_cpuflpr.yaml  (+4 more)
lib/fprotect/: CMakeLists.txt
modules/: modules.cmake
modules/hal_nordic/: CMakeLists.txt  nrfx_config_ext.h
modules/hal_nordic/nrfx/: CMakeLists.txt
modules/trusted-firmware-m/: Kconfig  Kconfig.tfm.defconfig  Kconfig.tfm.pm
samples/battery_api/: CMakeLists.txt  prj.conf
scripts/: quarantine.yaml
scripts/runners/: nrfutil_next.py
soc/nordic/: CMakeLists.txt  Kconfig  Kconfig.soc  soc.yml
soc/nordic/nrf71/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.nrf7120_enga_cpuapp  Kconfig.defconfig.nrf7120_enga_cpuflpr  Kconfig.soc  soc.c  soc.h  soc_preeng.h
tests/zephyr/drivers/clock_control/nrf_clock_calibration/: CMakeLists.txt  testcase.yaml
zephyr/: module.yml
(+63 files in other folders)
